Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -310,11 +310,13 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11002.tex}
 
+
 \subsection{Bode Plot}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \input{./chapters/ee18btech11048.tex}
 \input{./chapters/ee18btech11049.tex}
 \input{./chapters/es17btech11002.tex}
+\input{./chapters/ee18btech11039.tex}
 \input{./chapters/ee18btech11045.tex}
 \end{enumerate}
 
