--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -319,9 +319,9 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11039.tex}
 \input{./chapters/ee18btech11045.tex}
 \end{enumerate}
-
+%
 \section{Stability in Frequency Domain}
-
+%
 \subsection{Nyquist Criterion}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
@@ -330,7 +330,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11011_1.tex}
 \input{./chapters/ee18btech11016.tex}
 \end{enumerate}
-\subsection{}
+%
+%\subsection{}
 \subsection{Nyquist Criterion}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
@@ -351,15 +352,21 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 %
 \section{Design in Frequency Domain}
 \subsection{}
+%
 \subsection{}
+%
 \subsection{Lag Compensator}
 \input{./chapters/ee18btech11030.tex}
+%
 \subsection{Lead Compensator}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
 \input{./chapters/ee18btech11036.tex}
+\input{./chapters/ee18btech11046.tex}
 \end{enumerate}
-\subsection{}
+%
+\subsection{Compensator for Overshoot}
+\input{./chapters/ee18btech11026.tex}
 \subsection{}
 \subsection{Lead Compensator}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
