Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -320,6 +320,9 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11045.tex}
 \end{enumerate}
 %
+\subsection{Transient Response from Bode Plot}
+\numberwithin{equation}{subsection}
+\input{./chapters/ee18btech11047.tex}
 \section{Stability in Frequency Domain}
 %
 \subsection{Nyquist Criterion}
@@ -331,7 +334,6 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11016.tex}
 \end{enumerate}
 %
-%\subsection{}
 \subsection{Nyquist Criterion}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
