--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -323,11 +323,13 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{Transient Response from Bode Plot}
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11047.tex}
+%
 \section{Stability in Frequency Domain}
 %
 \subsection{Nyquist Criterion}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
+\input{./chapters/ee18btech11050_1.tex}
 \input{./chapters/ee18btech11028_1.tex}
 \input{./chapters/ee18btech11041.tex}
 \input{./chapters/ee18btech11011_1.tex}
@@ -380,7 +382,9 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{}
 
 \section{PID Controller Design}
-\subsection{Introduction}
+\subsection{PD}
+\input{./chapters/ee17btech11031_ke.tex}
+\subsection{PID}
 \input{./chapters/ee18btech11021.tex}
 
 %
