--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -332,6 +332,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11050_1.tex}
 \input{./chapters/ee18btech11028_1.tex}
 \input{./chapters/ee18btech11041.tex}
+\input{./chapters/ee18btech11025.tex}
 \input{./chapters/ee18btech11011_1.tex}
 \input{./chapters/ee18btech11016.tex}
 \end{enumerate}
