Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -296,6 +296,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 
 
 \section{Frequency Response Analysis}
+%
 \subsection{Polar Plot}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \input{./chapters/ee18btech11012.tex}
@@ -324,6 +325,10 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11047.tex}
 %
+\subsection{Parameter Estimation from Bode Plot}
+\numberwithin{equation}{subsection}
+\input{./chapters/ee18btech11006.tex}
+
 \section{Stability in Frequency Domain}
 %
 \subsection{Nyquist Criterion}
