Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -318,6 +318,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11049.tex}
 \input{./chapters/es17btech11002.tex}
 \input{./chapters/ee18btech11039.tex}
+\input{./chapters/ee18btech11031.tex}
 \input{./chapters/ee18btech11045.tex}
 \end{enumerate}
 %
