Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -348,7 +348,11 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \numberwithin{equation}{enumi}
 \input{./chapters/es17btech11015.tex}
 \end{enumerate}
-\subsection{}
+\subsection{$M$ and $N$ Circles}
+\begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
+\numberwithin{equation}{enumi}
+\input{./chapters/ee18btech11017_1.tex}
+\end{enumerate}
 \subsection{Nyquist and Routh-Hurwitz}
 \numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11029.tex}
@@ -364,7 +368,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \section{Design in Frequency Domain}
 \subsection{}
 %
-\subsection{}
+\subsection{Lead Compensator}
+\input{./chapters/ee18btech11044_2.tex}
 %
 \subsection{Lag Compensator}
 \input{./chapters/ee18btech11030.tex}
