Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -346,6 +346,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{Nyquist Criterion}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
+\input{./chapters/ee18btech11028_1.tex}
 \input{./chapters/es17btech11015.tex}
 \end{enumerate}
 \subsection{$M$ and $N$ Circles}
