Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -389,7 +389,10 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
 \input{./chapters/es17btech11002_new.tex}
+\input{./chapters/ep18btech11016.tex}
 \end{enumerate}
+\subsection{Lag Lead Compensator}
+\input{./chapters/ee18btech11049_2.tex}
 \subsection{}
 \subsection{}
 \subsection{}
