Add existing files

--- a/feedback/gvv_feedback_manual.tex
+++ b/feedback/gvv_feedback_manual.tex
@@ -33,7 +33,7 @@
 \usepackage{mathtools}
 \usepackage{steinmetz}
 \usepackage{tikz}
-\usepackage{circuitikz}
+\usepackage[american]{circuitikz}
 \usepackage{verbatim}
 \usepackage{tfrupee}
 \usepackage[breaklinks=true]{hyperref}
@@ -289,9 +289,10 @@ Download python codes using
 svn co https://github.com/gadepall/school/trunk/control/codes
 \end{lstlisting}
 
-%\section{Feedback Voltage Amplifier: Series-Shunt}
-%\subsection{Introduction}
-%\input{./chapters/ee18btech11005.tex}
+\section{Feedback Voltage Amplifier: Series-Shunt}
+\subsection{Introduction}
+\input{./chapters/ee18btech11005.tex}
+%
 \section{Feedback Current Amplifier: Shunt-Series}
 \subsection{Introduction}
 \input{./chapters/ee18btech11014.tex}
