Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -384,7 +384,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 %
 \subsection{Compensator for Overshoot}
 \input{./chapters/ee18btech11026.tex}
-\subsection{}
+%\subsection{}
 \subsection{Lead Compensator}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
@@ -393,6 +393,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \end{enumerate}
 \subsection{Lag Lead Compensator}
 \input{./chapters/ee18btech11049_2.tex}
+\subsection{Lag Lead Compensator}
+\input{./chapters/ee18btech11012_1.tex}
 \subsection{}
 \subsection{}
 \subsection{}
