Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -356,6 +356,9 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \end{enumerate}
 \subsection{Nyquist and Routh-Hurwitz}
 \numberwithin{equation}{subsection}
+\input{./chapters/ee18btech11042_1.tex}
+\subsection{Nyquist and Routh-Hurwitz}
+\numberwithin{equation}{subsection}
 \input{./chapters/ee18btech11029.tex}
 \subsection{Nyquist}
 \numberwithin{equation}{subsection}
