Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -392,6 +392,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{Lead Compensator}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
+\input{./chapters/ee18btech11051/ee18btech11051.tex}
 \input{./chapters/es17btech11002_new.tex}
 \input{./chapters/ep18btech11016.tex}
 \end{enumerate}
