Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -352,6 +352,7 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \subsection{$M$ and $N$ Circles}
 \begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
 \numberwithin{equation}{enumi}
+\input{./chapters/ee18btech11020_1.tex}
 \input{./chapters/ee18btech11017_1.tex}
 \end{enumerate}
 \subsection{Nyquist and Routh-Hurwitz}
