Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -410,6 +410,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee17btech11031_ke.tex}
 \subsection{PID}
 \input{./chapters/ee18btech11021.tex}
+\subsection{Position Control System}
+\input{./chapters/ee18btech11001.tex}
 
 %
 %
