Add existing files

--- a/feedback/gvv_feedback_manual.tex
+++ b/feedback/gvv_feedback_manual.tex
@@ -290,11 +290,12 @@ svn co https://github.com/gadepall/school/trunk/control/feedback/codes
 \end{lstlisting}
 
 \section{Feedback Voltage Amplifier: Series-Shunt}
-\subsection{Introduction}
 \input{./chapters/ee18btech11005.tex}
 %
+%\section{Feedback Current Amplifier: Shunt-Series}
+%\input{./chapters/ee18btech11021.tex}
+%
 \section{Feedback Current Amplifier: Shunt-Series}
-\subsection{Introduction}
 \input{./chapters/ee18btech11014.tex}
 
 \end{document}
