Add existing files

--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -373,7 +373,11 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 %
 %
 \section{Design in Frequency Domain}
-\subsection{}
+\subsection{GM, PM and Overshoot}
+\begin{enumerate}[label=\thesubsection.\arabic*.,ref=\thesubsection.\theenumi]
+\numberwithin{equation}{enumi}
+\input{./chapters/ee18btech11038.tex}
+\end{enumerate}
 %
 \subsection{Lead Compensator}
 \input{./chapters/ee18btech11044_2.tex}
