--- a/feedback/gvv_feedback_manual.tex
+++ b/feedback/gvv_feedback_manual.tex
@@ -296,7 +296,10 @@ svn co https://github.com/gadepall/school/trunk/control/feedback/codes
 %\input{./chapters/ee18btech11021.tex}
 %
 \section{Feedback Current Amplifier: Shunt-Series}
+\subsection{Ideal Case}
 \input{./chapters/ee18btech11014.tex}
+\subsection{Practical Case}
+\input{./chapters/ee18btech11014_1.tex}
 
 \end{document}
 
