Add existing files

--- a/feedback/gvv_feedback_manual.tex
+++ b/feedback/gvv_feedback_manual.tex
@@ -292,14 +292,17 @@ svn co https://github.com/gadepall/school/trunk/control/feedback/codes
 \section{Feedback Voltage Amplifier: Series-Shunt}
 \input{./chapters/ee18btech11005.tex}
 %
-%\section{Feedback Current Amplifier: Shunt-Series}
-%\input{./chapters/ee18btech11021.tex}
 %
 \section{Feedback Current Amplifier: Shunt-Series}
 \subsection{Ideal Case}
 \input{./chapters/ee18btech11014.tex}
 \subsection{Practical Case}
 \input{./chapters/ee18btech11014_1.tex}
+%
+\section{Feedback Current Amplifier: Example}
+\input{./chapters/ee18btech11021.tex}
+\section{Feedback Transconductance Amplifier: Series-Series}
+\input{./chapters/EE18BTECH11007.tex}
 
 \end{document}
 
