--- a/feedback/figs/EE18BTECH11007/circuit1.tex
+++ b/feedback/figs/EE18BTECH11007/circuit1.tex
@@ -24,7 +24,8 @@ node[label={right:$V_o$}]{} ++(3,0)
 (npn1.E)++(0,-0.25) to [short,*-]++(0.5,0)
 node[label={right:$V_f$}]{} ++(1.5,0)
 (npn1.B)++(-0.75,0) to [short,*-]++(0,1)
-node[label={right:$V_i$}]{} ++(2,0)
-
-
+node[label={right:$V_i$}]{} ++(2,0);
+\draw (npn3.C)++(2.75,-2)node[label={right:$R_{out}$}]{}--++(0,1)--++(-1.5,0)[->];
+\draw (npn3.E)++(-2,-1)node[label={above:$R_{of}$}]{}--++(1.75,0)[->];
+\draw (npn1.B)++(-2.5,-2)node[label={left:$R_{if}$}]{}--++(0,1.5)--++(0.5,0)[->]
 ;\end{circuitikz}
