--- a/feedback/figs/EE18BTECH11007/circuit3.tex
+++ b/feedback/figs/EE18BTECH11007/circuit3.tex
@@ -1,5 +1,5 @@
 \begin{circuitikz}[american]
-\draw (0,0)--(-1,0)to [voltage source,l_=$V_i$]++(0,-2)to node[ground]{}++(0,-0.5) ++(6,0)
+\draw (0,0)--(-3,0)to [voltage source,l_=$V_i$]++(0,-2)to node[ground]{}++(0,-0.5) ++(6,0)
 (0.75,0) node[npn](npn1){Q1}
 (npn1.C)--++(0,1.5) to [R,l_=$R_{C1}$]++(0,1.5) to node[ground,rotate=180]{}++(0,0.25)
 (npn1.E)-- ++(0,-2) to [R,l_=$R_{E1}$]++(0,-1.5)to node[ground]{}++(0,-0.25)
@@ -12,8 +12,9 @@
 (npn2.C)++(0,0.75)--(npn3.B)
 (npn3.C)to[R,l_=$R_{C3}$]++(0,1.5)to node[ground,rotate=180]{}++(0,0.25)
 (npn3.E)to[short,i_=$I_o$]++(0,-2)coordinate(a)to[R,l_=$R_{E2}$]++(0,-1.5)to node[ground]{}++(0,-0.25)
-(a)++(0,0.25)to[R,l_=$R_F$]++(3,0)to[R,l_=$R_{E1}$]++(0,-1.5)to node[ground]{}++(0,-0.25)
+(a)++(0,0.25)to[R,l_=$R_F$]++(3,0)to[R,l_=$R_{E1}$]++(0,-1.5)to node[ground]{}++(0,-0.25);
+\draw (-2,-2) node[label={right:$R_i$}]{}--++(0,1.75)--++(0.5,0)[->];
+\draw (npn3.E)++(2,-0.5)node[label={right:$R_o$}]{}--++(-1.5,0)[->];
 
- 
 
 ;\end{circuitikz}
