--- a/feedback/figs/ee18btech11021/Small_Signal_Model.tex
+++ b/feedback/figs/ee18btech11021/Small_Signal_Model.tex
@@ -3,8 +3,8 @@
 \draw
 (-0.5,0) to[short,i=$I_i$,*-*] (0.5,0){}
 (0.5,0) -- (0.5,-1) to[R=$R_s$] (0.5,-2) --(0.5,-3) node[ground]{}
-(0.5,0) -- (1.5,0) to[short, i = $I_{i}$] (1.5,-1) to[R=$R_{id}$] (1.5,-2) --(1.5,-3) node[ground]{}
-(1.5,0) -- (2.5,0) to[short, i = $I_{f}$] (2.5,-0.5) to[R=$R_1$] (2.5,-2) to[R=$R_2$] (2.5,-2.5) --(2.5,-3) node[ground]{}
+(0.5,0) -- (1.5,0) -- (1.5,-1) to[R=$R_{id}$] (1.5,-2) --(1.5,-3) node[ground]{}
+(1.5,0) -- (2.5,0) -- (2.5,-0.5) to[R=$R_1$] (2.5,-2) to[R=$R_2$] (2.5,-2.5) --(2.5,-3) node[ground]{}
 (2.5,0) -- (3.5,0) node at(3.5,-0.2){$+$}
 node at(3.5,-3){$-$}
 node at(3.5,-1.25){$V_i$}
