Add existing files

--- a/feedback/figs/ee18btech11021/Shunt_Series_Block_Diagram.tex
+++ b/feedback/figs/ee18btech11021/Shunt_Series_Block_Diagram.tex
@@ -1,5 +1,5 @@
 \begin{circuitikz}[american]
-\usetikzlibrary{positioning, fit, calc}
+%\usetikzlibrary{positioning, fit, calc}
 \draw (0,0) to[I = $I_{s}$] (0,2) -- (2,2) to[R=$R_s$,*-*] (2,0){}
 (2,2) -- (5,2) {}
 (7,1)node[draw,minimum width=4cm,minimum height=4cm] (load) {Gain Amplifier}{}
