--- a/feedback/gvv_feedback_manual.tex
+++ b/feedback/gvv_feedback_manual.tex
@@ -42,6 +42,7 @@
 \usetkzobj{all}
 \usetikzlibrary{decorations.markings}
 \usetikzlibrary{shapes.geometric}
+\usetikzlibrary{positioning, fit, calc}
 \newif\iflabrev
 \usepackage{listings}
     \usepackage{color}                                            %%
@@ -300,7 +301,8 @@ svn co https://github.com/gadepall/school/trunk/control/feedback/codes
 \input{./chapters/ee18btech11014_1.tex}
 %
 \section{Feedback Current Amplifier: Example}
-\input{./chapters/ee18btech11021.tex}
+\input{./chapters/ee18btech11021_6.tex}
+%
 \section{Feedback Transconductance Amplifier: Series-Series}
 \input{./chapters/EE18BTECH11007.tex}
 
