Add existing files

--- a/feedback/exercises/ee18btech11006/gvv_feedback_manual.tex
+++ b/feedback/exercises/ee18btech11006/gvv_feedback_manual.tex
@@ -157,13 +157,13 @@ columns=fullflexible
 \vspace{3cm}
 \title{
 %	\logo{
-Control Systems
+OPAMP Stability
 %	}
 }
-\author{ G V V Sharma$^{*}$% <-this % stops a space
+\author{ C Shruti$^{*}$% <-this % stops a space
 	\thanks{*The author is with the Department
 		of Electrical Engineering, Indian Institute of Technology, Hyderabad
-		502285 India e-mail:  gadepall@iith.ac.in. All content in this manual is released under GNU GPL.  Free and open source.}
+		502285 India . All content in this manual is released under GNU GPL.  Free and open source.}
 	
 }	
 %\title{
@@ -219,8 +219,8 @@ Control Systems
 % column for its text to clear the IEEEpubid mark.
 % make the title area
 \maketitle
-\newpage
-\tableofcontents
+%\newpage
+%\tableofcontents
 \bigskip
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
@@ -249,13 +249,13 @@ Control Systems
 % For peerreview papers, this IEEEtran command inserts a page break and
 % creates the second title. It will be ignored for other modes.
 %\IEEEpeerreviewmaketitle
-\begin{abstract}
-This manual is an introduction to control systems in feedback circuits. Links to sample Python codes are available in the text.  
-\end{abstract}
-Download python codes using 
-\begin{lstlisting}
-svn co https://github.com/gadepall/school/trunk/control/feedback/codes
-\end{lstlisting}
-\section{Stability}
+%\begin{abstract}
+%This manual is an introduction to control systems in feedback circuits. Links to sample Python codes are available in the text.  
+%\end{abstract}
+%Download python codes using 
+%\begin{lstlisting}
+%svn co https://github.com/gadepall/school/trunk/control/feedback/codes
+%\end{lstlisting}
+%\section{Stability}
 \input{./chapters/ee18btech11006.tex}
 \end{document}
