--- a/feedback/exercises/ee18btech11044/gvv_feedback_manual.tex
+++ b/feedback/exercises/ee18btech11044/gvv_feedback_manual.tex
@@ -156,13 +156,13 @@ columns=fullflexible
 \vspace{3cm}
 \title{
 %	\logo{
-Control Systems
+Wein-bridge oscillator
 %	}
 }
-\author{ G V V Sharma$^{*}$% <-this % stops a space
+\author{ Vedala Sai Ashok$^{*}$% <-this % stops a space
 	\thanks{*The author is with the Department
 		of Electrical Engineering, Indian Institute of Technology, Hyderabad
-		502285 India e-mail:  gadepall@iith.ac.in. All content in this manual is released under GNU GPL.  Free and open source.}
+		502285 India. All content in this manual is released under GNU GPL.  Free and open source.}
 	
 }	
 %\title{
@@ -218,8 +218,8 @@ Control Systems
 % column for its text to clear the IEEEpubid mark.
 % make the title area
 \maketitle
-\newpage
-\tableofcontents
+%\newpage
+%\tableofcontents
 \bigskip
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
@@ -248,9 +248,9 @@ Control Systems
 % For peerreview papers, this IEEEtran command inserts a page break and
 % creates the second title. It will be ignored for other modes.
 %\IEEEpeerreviewmaketitle
-\begin{abstract}
-The objective of this manual is to introduce control system design at an elementary level.
-\end{abstract}
-\section{Feedback Circuits}
-\input{chapters/ee18btech11044/ee18btech11044_3.tex}
+%\begin{abstract}
+%The objective of this manual is to introduce control system design at an elementary level.
+%\end{abstract}
+%\section{Feedback Circuits}
+\input{chapters/ee18btech11044_3.tex}
 \end{document}
