--- a/feedback/exercises/ee18btech11048/gvv_feedback_manual.tex
+++ b/feedback/exercises/ee18btech11048/gvv_feedback_manual.tex
@@ -218,8 +218,8 @@ Control Systems
 % column for its text to clear the IEEEpubid mark.
 % make the title area
 \maketitle
-\newpage
-\tableofcontents
+%\newpage
+%\tableofcontents
 \bigskip
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
@@ -248,13 +248,13 @@ Control Systems
 % For peerreview papers, this IEEEtran command inserts a page break and
 % creates the second title. It will be ignored for other modes.
 %\IEEEpeerreviewmaketitle
-\begin{abstract}
-This manual is an introduction to control systems based on GATE problems.Links to sample Python codes are available in the text.  
-\end{abstract}
-Download python codes using 
-\begin{lstlisting}
-svn co https://github.com/gadepall/school/trunk/control/codes
-\end{lstlisting}
-\section{Feedback Circuits}
+%\begin{abstract}
+%This manual is an introduction to control systems based on GATE problems.Links to sample Python codes are available in the text.  
+%\end{abstract}
+%Download python codes using 
+%\begin{lstlisting}
+%svn co https://github.com/gadepall/school/trunk/control/codes
+%\end{lstlisting}
+%\section{Feedback Circuits}
 \input{./chapters/ee18btech11048_fbc.tex}
 \end{document}
