--- a/ketan/ketan_control_manual.tex
+++ b/ketan/ketan_control_manual.tex
@@ -418,6 +418,8 @@ svn co https://github.com/gadepall/school/trunk/control/ketan/codes
 \input{./chapters/ee18btech11021.tex}
 \subsection{Position Control System}
 \input{./chapters/ee18btech11001.tex}
+\subsection{Position Control System}
+\input{./chapters/ee18btech11019.tex}
 
 %
 %
