Add existing files

--- a/feedback/exercises/ee18btech11048/gvv_feedback_manual.tex
+++ b/feedback/exercises/ee18btech11048/gvv_feedback_manual.tex
@@ -156,7 +156,7 @@ columns=fullflexible
 \vspace{3cm}
 \title{
 %	\logo{
-Control Systems
+Feedback Transconductance Amplifier 
 %	}
 }
 \author{ Adyasa Mohanty$^{*}$% <-this % stops a space
