Add existing files

--- a/feedback/exercises/es17btech11002/tables/es17btech11002/es17btech11002_table1.tex
+++ b/feedback/exercises/es17btech11002/tables/es17btech11002/es17btech11002_table1.tex
@@ -192,25 +192,25 @@
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{$R$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{$10 \Omega$}
+	{$250 \Omega$}
 \\
 \hhline{|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\centering}\gnumbox{$C$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{$0.01mF$}
+	{$1mF$}
 \\
 \hhline{|-|-|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{$R_{1}$}}
+	{\gnumericPB{\centering}\gnumbox{$R_{2}$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{$1000\Omega $}
+	{$2k\Omega $}
 \\
 \hhline{|--|}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\centering}\gnumbox{$R_{2}$}}
+	{\gnumericPB{\centering}\gnumbox{$R_{1}$}}
 	&\multicolumn{1}{p{\gnumericColB}|}%
-	{$2030\Omega $}	
+	{$1k\Omega $}	
 \\
 \hhline{|-|-|}
 \end{tabular}
