--- a/feedback/exercises/ee18btech11039/gvv_feedback_manual.tex
+++ b/feedback/exercises/ee18btech11039/gvv_feedback_manual.tex
@@ -219,8 +219,8 @@ Series-shunt feedback amplifier
 % column for its text to clear the IEEEpubid mark.
 % make the title area
 \maketitle
-\newpage
-\tableofcontents
+%\newpage
+%\tableofcontents
 \bigskip
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
@@ -249,23 +249,23 @@ Series-shunt feedback amplifier
 % For peerreview papers, this IEEEtran command inserts a page break and
 % creates the second title. It will be ignored for other modes.
 %\IEEEpeerreviewmaketitle
-\begin{abstract}
-This manual is an introduction to control systems in feedback circuits. Links to sample Python codes are available in the text.  
-\end{abstract}
-Download python codes using 
-\begin{lstlisting}
-svn co https://github.com/gadepall/school/trunk/control/feedback/codes
-\end{lstlisting}
-\section{Feedback Voltage Amplifier: Series-Shunt}
+%\begin{abstract}
+%This manual is an introduction to control systems in feedback circuits. Links to sample Python codes are available in the text.  
+%\end{abstract}
+%Download python codes using 
+%\begin{lstlisting}
+%svn co https://github.com/gadepall/school/trunk/control/feedback/codes
+%\end{lstlisting}
+%\section{Feedback Voltage Amplifier: Series-Shunt}
 \input{./chapters/ee18btech11039.tex}
 %\input{./chapters/ee18btech11005.tex}
 %
 %\section{Feedback Current Amplifier: Shunt-Series}
 %\input{./chapters/ee18btech11021.tex}
 %
-\section{Feedback Current Amplifier: Shunt-Series}
-\subsection{Ideal Case}
-%\input{./chapters/ee18btech11014.tex}
-\subsection{Practical Case}
+%\section{Feedback Current Amplifier: Shunt-Series}
+%\subsection{Ideal Case}
+%%\input{./chapters/ee18btech11014.tex}
+%\subsection{Practical Case}
 %\input{./chapters/ee18btech11014_1.tex}
 \end{document}
