--- a/feedback/exercises/ee18btech11038/tables/ee18btech11038_given.tex
+++ b/feedback/exercises/ee18btech11038/tables/ee18btech11038_given.tex
@@ -188,93 +188,44 @@
 	&\multicolumn{1}{p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{Value}}}
 \\
+\hhline{|-|-}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{1}$}}}
+	&\multicolumn{1}{p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$3.5k\Omega$}}}
+\\
+\hhline{|-|-}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{2}$}}}
+	&\multicolumn{1}{p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$14k\Omega$}}}
+\\
+\hhline{|-|-}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$I_{D1}$}}}
+	&\multicolumn{1}{p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$0.2mA$}}}
+\\
+\hhline{|-|-}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$V_{OV}$}}}
+	&\multicolumn{1}{p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$0.2V$}}}
 
+\\
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$g_{m1}$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$V_{t}$}}}
 	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$2mA/V$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$0.5V$}}}
 \\
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$g_{m2}$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$V_{A}$}}}
 	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$2mA/V$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$r_{o1}$}}}
-	&\multicolumn{1}{p{\gnumericColB}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$50k\Omega$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$r_{o2}$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$50k\Omega$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{s}$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$\infty$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{L}$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$0$}}}
-\\
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$10V$}}}
 
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$G$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$-526.3$}}}
 \\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{i}$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$17.5k\Omega$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{o}$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$332.8k\Omega$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$H$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$-0.2$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$GH$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$105.26$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$T$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$-4.95$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{in}$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$164\Omega$}}}
-\\
-\hhline{|-|-}
-	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{out}$}}}
-	&\multicolumn{1}{p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$35.3M\Omega$}}}
-\\
-
 
 \hhline{|-|-|}
 \end{tabular}
