--- a/feedback/exercises/ee18btech11038_bkup/gvv_feedback_manual.tex
+++ b/feedback/exercises/ee18btech11038_bkup/gvv_feedback_manual.tex
@@ -219,8 +219,8 @@ Shunt-Series Amplifiers:Practical Case
 % column for its text to clear the IEEEpubid mark.
 % make the title area
 \maketitle
-\newpage
-\tableofcontents
+%\newpage
+%\tableofcontents
 \bigskip
 \renewcommand{\thefigure}{\theenumi}
 \renewcommand{\thetable}{\theenumi}
