--- a/feedback/exercises/ee18btech11038_bkup/tables/ee18btech11038_finalvalues.tex
+++ b/feedback/exercises/ee18btech11038_bkup/tables/ee18btech11038_finalvalues.tex
@@ -188,7 +188,18 @@
 	&\multicolumn{1}{p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{Value}}}
 \\
-
+\hhline{|-|-}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{1}$}}}
+	&\multicolumn{1}{p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$3.5k\Omega$}}}
+\\
+\hhline{|-|-}
+	 \multicolumn{1}{|p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$R_{2}$}}}
+	&\multicolumn{1}{p{\gnumericColA}|}%
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$14k\Omega$}}}
+\\
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$g_{m1}$}}}
@@ -228,7 +239,7 @@
 
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$G$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$A$}}}
 	&\multicolumn{1}{p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$-526.3$}}}
 \\
@@ -246,19 +257,19 @@
 \\
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$H$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$\beta$}}}
 	&\multicolumn{1}{p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$-0.2$}}}
 \\
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$GH$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$A\beta$}}}
 	&\multicolumn{1}{p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$105.26$}}}
 \\
 \hhline{|-|-}
 	 \multicolumn{1}{|p{\gnumericColA}|}%
-	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$T$}}}
+	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$A_{f}$}}}
 	&\multicolumn{1}{p{\gnumericColA}|}%
 	{\gnumericPB{\raggedright}\gnumbox[l]{\textbf{$-4.95$}}}
 \\
