--- a/feedback/exercises/ee18btech11038_bkup/figs/ee18btech11038_outckt.tex
+++ b/feedback/exercises/ee18btech11038_bkup/figs/ee18btech11038_outckt.tex
@@ -5,7 +5,5 @@
 \draw (-2,0)node[below]{$+$};
 \draw (-2,3)node[below]{$-$};
 \draw (-2, 1.5)node[]{$v_{gs2}$};
-%\draw (6,0)node[ground]{} to[vsource, l=$V_{x}$](6,6) to[short](3,6);
-\draw (3,6) to[short](6,6) to[vsource, l = $V_{x}$](6,0) to (6,0)node[ground]{};
-\draw (6,6) to[short, i= $I_{x}$](3,6);
+\draw (6,0)node[ground]{} to[vsource, l=$V_{x}$](6,6) to[short](3,6);
 \end{circuitikz}
