--- a/feedback/exercises/ee18btech11038_bkup/figs/ee18btech11038_smlckt.tex
+++ b/feedback/exercises/ee18btech11038_bkup/figs/ee18btech11038_smlckt.tex
@@ -1,9 +1,9 @@
 \begin{circuitikz}[american]
 \ctikzset{tripoles/mos style/arrows}
-\draw  (0,0) node[ground](GND){} -- (0,1) to[isource, l= $I_{s}$] (0,3) -- (3,3) to[R=$R_{2}$, i=$I_{s}$] (6,3) -- (6,3)node{} to[R=$R_{1}$] (6,0) node[ground](GND){} (6,0);
+\draw  (0,0) node[ground](GND){} -- (0,1) to[isource, l= $I_{s}$] (0,3) -- (3,3) to[R=$R_{2}(14k\ohm$), i=$I_{s}$] (6,3) -- (6,3)node{} to[R=$R_{1}(3.5k\ohm)$] (6,0) node[ground](GND){} (6,0);
 
 \draw (3,6) node[nmos,](Q1){};
-\draw (2,3)  to[short, i=$i\text{=}0$] (Q1.G);
+\draw (2,3)  to[short, i=$i(0)$] (Q1.G);
 \draw (Q1.center) node[right]{{$Q_{1}$}};
 \draw (Q1.S) -- (3,5) node[ground](GND){};
 \draw (Q1.D) -- (3,7);
