Add existing files

--- a/feedback/exercises/ee18btech11046/refs/gvv_feedback_manual.tex
+++ b/feedback/exercises/ee18btech11046/refs/gvv_feedback_manual.tex
@@ -157,26 +157,15 @@ columns=fullflexible
 \vspace{3cm}
 \title{
 %	\logo{
-Trans-resistance Feedback Circuits
+Wein-bridge oscillator
 %	}
 }
-\author{V. L. Narasimha Reddy $^{*}$% <-this % stops a space
+\author{ Vedala Sai Ashok$^{*}$% <-this % stops a space
 	\thanks{*The author is with the Department
 		of Electrical Engineering, Indian Institute of Technology, Hyderabad
 		502285 India. All content in this manual is released under GNU GPL.  Free and open source.}
 	
 }	
-%\title{
-%%	\logo{
-%Wein-bridge oscillator
-%%	}
-%}
-%\author{ Vedala Sai Ashok$^{*}$% <-this % stops a space
-%	\thanks{*The author is with the Department
-%		of Electrical Engineering, Indian Institute of Technology, Hyderabad
-%		502285 India. All content in this manual is released under GNU GPL.  Free and open source.}
-%	
-%}	
 %\title{
 %	\logo{Matrix Analysis through Octave}{\begin{center}\includegraphics[scale=.24]{tlc}\end{center}}{}{HAMDSP}
 %}
@@ -264,5 +253,5 @@ Trans-resistance Feedback Circuits
 %The objective of this manual is to introduce control system design at an elementary level.
 %\end{abstract}
 %\section{Feedback Circuits}
-\input{chapters/ee18btech11046.tex}
+%\input{chapters/ee18btech11046.tex}
 \end{document}
