--- a/manual/gvv_control_manual.tex
+++ b/manual/gvv_control_manual.tex
@@ -384,8 +384,8 @@ svn co https://github.com/gadepall/school/trunk/control/codes
 \section{Oscillator}
 \subsection{Introduction}
 \input{./chapters/ee18btech11030.tex}
-\subsection{Example}
-\input{./chapters/ee18btech11019.tex}
+%\subsection{Example}
+%\input{./chapters/ee18btech11019.tex}
 %
 \section{Root Locus}
 \subsection{Introduction}
